--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,9 +16,8 @@
     <!-- jQuery and AngularJS. jQuery must be first in line register it self for use by AngularJS -->
     <!-- Other utility libraries as well -->
     <script src="lib/jquery-2.0.3.min.js"></script>
-    <script src="lib/angular-1.2.0/angular.min.js"></script>
-    <script src="lib/angular-1.2.0/angular-route.min.js"></script>
-    <script src="lib/angular-1.2.0/angular-resource.min.js"></script>
+    <script src="lib/angular-1.1.5/angular.min.js"></script>
+    <script src="lib/angular-1.1.5/angular-resource.min.js"></script>
     <!-- Angular wrapper for twitter bootstrap widgets -->
     <script src="lib/ui-bootstrap-tpls-0.5.0.min.js"></script>
     <!-- Sugar JS. Utility for javascript -->
@@ -35,6 +34,10 @@
 </head>
 
 <body>
+
+<div ng-show="showOverlay == true" class="overlay" ng-animate="{show: 'fade-show', hide: 'fade-hide'}"></div>
+
+<div ng-hide="showOverlay == false" class="overlay" ng-animate="{show: 'fade-show', hide: 'fade-hide'}"></div>
 
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
